SigmaCodebackup3rdSep/objects/Purchase_Order_Product__c.object
<CustomObject>
    <fields>
        <fullName>AvailableQuantityRef__c</fullName>
        <label>AvailableQuantityRef</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Buying_Price__c</fullName>
        <label>Net Buying Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delevered_Quantity__c</fullName>
        <label>Total Dispatched Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Delivered_Date__c</fullName>
        <label>Delivered Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivered_Quantity__c</fullName>
        <label>Delivered Quantity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Discount(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Exchange_Net_Buying_Price__c</fullName>
        <label>Exchange Net Buying Price</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Exchange_Price__c</fullName>
        <label>Exchange Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Merchant_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Merchant Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Order Products</relationshipLabel>
        <relationshipName>Purchase_Order_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Amount__c</fullName>
        <label>Net Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Purchase Order Products</relationshipLabel>
        <relationshipName>Purchase_Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orderd_Quantity__c</fullName>
        <label>Ordered Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Parent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Order Products (Parent Account)</relationshipLabel>
        <relationshipName>Purchase_Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Vendor Buying Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Purchase Order Products</relationshipLabel>
        <relationshipName>Purchase_Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_BOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Purchase Order BOM</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Purchase Order Products (Purchase Order BOM)</relationshipLabel>
        <relationshipName>Purchase_Order_Products1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order__c</fullName>
        <label>Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Purchase Order Products</relationshipLabel>
        <relationshipName>Purchase_Order_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity_Got__c</fullName>
        <label>Quantity Got</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Order Quantity</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Received_Quantity__c</fullName>
        <label>Remaining Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recent_Dispatched_Quantity__c</fullName>
        <label>Recent Dispatched Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ref_check__c</fullName>
        <formula>Unit_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ref check</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_Dispatched_Quantity__c</fullName>
        <label>Remaining Dispatched Quantity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Remaining_to_come__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Received Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Returned_Date__c</fullName>
        <label>Returned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Returned_Quantity__c</fullName>
        <label>Returned Quantity</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Notes__c</fullName>
        <label>Shipment Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Tracking_Url__c</fullName>
        <label>Shipment Tracking Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tax_Amount__c</fullName>
        <defaultValue>0.00</defaultValue>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Code</label>
        <referenceTo>Tax_Code__c</referenceTo>
        <relationshipLabel>Purchase Order Products</relationshipLabel>
        <relationshipName>Purchase_Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Tax_Rate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Amount__c</fullName>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Buying_Price__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Buying Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Under_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>To capture the warranty</description>
        <inlineHelpText>Check this if the Product/Service is under warranty</inlineHelpText>
        <label>Under Warranty?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unit_Price__c</fullName>
        <label>Unit Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vender_Products__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vender Product</label>
        <referenceTo>Vendor_Product__c</referenceTo>
        <relationshipLabel>Purchase Order Products</relationshipLabel>
        <relationshipName>Purchase_Order_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VendorPrice__c</fullName>
        <defaultValue>0</defaultValue>
        <label>VendorPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Email__c</fullName>
        <label>Vendor_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Vendor_Expected_Delivery_Date__c</fullName>
        <label>Vendor Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Expected_Shipped_Date__c</fullName>
        <label>Vendor Expected Shipped Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Price__c</fullName>
        <formula>Vender_Products__r.Buying_Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Status__c</fullName>
        <label>Vendor Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Accept</fullName>
                </value>
                <value>
                    <fullName>Request Cancel</fullName>
                </value>
                <value>
                    <fullName>Dispatched</fullName>
                </value>
                <value>
                    <fullName>--None--</fullName>
                </value>
                <value>
                    <fullName>Partial Dispatched</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <formula>Purchase_Order__r.Product_Supplier__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Duration_Unit__c</fullName>
        <description>Captures unit of the warranty duration</description>
        <inlineHelpText>Choose unit of the warranty duration</inlineHelpText>
        <label>Warranty Duration Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Day(s)</fullName>
                </value>
                <value>
                    <fullName>Month(s)</fullName>
                </value>
                <value>
                    <fullName>Year(s)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Duration__c</fullName>
        <description>Related to warranty duration</description>
        <inlineHelpText>Select warranty duration</inlineHelpText>
        <label>Warranty Duration</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>2.5</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>3.5</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>4.5</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>5.5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>6.5</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>7.5</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>8.5</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>9.5</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_End_Date__c</fullName>
        <description>Related to warranty end date</description>
        <inlineHelpText>Select end date of the warranty</inlineHelpText>
        <label>Warranty End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Warranty_Start_Date__c</fullName>
        <description>Related to warranty start date</description>
        <inlineHelpText>Select start date of the warranty</inlineHelpText>
        <label>Warranty Start Date</label>
        <type>Date</type>
    </fields>
    <label>Purchase Order Product</label>
    <nameField>
        <displayFormat>POP-{0000}</displayFormat>
        <label>Purchase Order Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>